@@ -331,6 +331,7 @@ The Relationships for probes are:
 	<li>Marker field must be filled in for the Autopopulate buttons to work; otherwise, nothing will happen.</li>
 	<li>After pressing the Autopopulate buttons, the cursor will move to the Region Covered field.</li>
 	<li>If you enter text in the Name field, the Autopopulate buttons will not overwrite. Other fields will be filled in, as in expected behavior.</li>
+	<li>Tip: Clear Partial (Ctrl-Alt-T) works well with this.</li>
 
 </ol>
 
