@@ -954,22 +954,22 @@
 		<div class="row topMargin">
 			<div class="col-sm-4" style="">
 				<label class="label label-search">Created By</label>
-				<input class="form-control" ng-model="vm.apiDomain.createdBy" id="createdBy" tabindex="-1"/>
+				<input class="form-control" ng-model="vm.apiDomain.createdBy" id="createdBy" />
 			</div>
 			<div class="col-sm-4" style="">
 				<label class="label label-search">Creation Date</label>
-				<input class="form-control" ng-model="vm.apiDomain.creation_date" id="creationDate" tabindex="-1"/>
+				<input class="form-control" ng-model="vm.apiDomain.creation_date" id="creationDate" />
 			</div>
 		</div>
 
 		<div class="row topMargin">
 			<div class="col-sm-4" style="">
 				<label class="label label-search">Modified By</label>
-				<input class="form-control" ng-model="vm.apiDomain.modifiedBy" id="modifiedBy" tabindex="-1"/>
+				<input class="form-control" ng-model="vm.apiDomain.modifiedBy" id="modifiedBy" />
 			</div>
 			<div class="col-sm-4" style="">
 				<label class="label label-search">Modification Date</label>
-				<input class="form-control" ng-model="vm.apiDomain.modification_date" id="modificationDate" tabindex="-1"/>
+				<input class="form-control" ng-model="vm.apiDomain.modification_date" id="modificationDate" />
 			</div>
 		</div>
 
